fix in main Buttons due to code overlap

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -10,7 +10,7 @@
 
 
 .toolbar {
-  z-index: 10;
+  z-index: 7;
   position: fixed;
   top: 0;
   left: 0;
